# excel-model

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  mkdocs.yml  pixi.toml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  claude-mention.yml  code-quality.yml  dep-audit.yml  docs-deploy.yml  docs-freshness.yml  docs-update.yml  factory-orchestrator.yml  issue-implement.yml  issue-triage.yml  pr-autofix.yml  pr-code-review.yml  pr-docs-check.yml  publish.yml  release.yml  security-scan.yml  test-coverage.yml  workflow-upgrade.yml
docs/: index.md
docs/api/: cli.md  config.md  data_sheet.md  excel_writer.md  formula_engine.md  spec.md
excel_model/: __init__.py  cli.py  config.py  data_sheet.py  data_sheet_validator.py  describe.py  excel_writer.py  exceptions.py  formula_engine.py  formula_param_validator.py  formula_types.py  injection_guard.py  input_validator.py  loader.py  named_ranges.py  spec.py  spec_loader.py  spec_schema.py  style.py  time_engine.py  validator.py
tests/: conftest.py  test_cli.py  test_config.py  test_coverage_gaps.py  test_data_sheet.py  test_data_sheet_validator.py  test_excel_writer.py  test_formula_engine.py  test_formula_engine_extended.py  test_formula_injection.py  test_loader.py  test_models_bva.py  test_models_comparison.py  test_models_dcf.py  test_models_p_and_l.py  test_models_scenario.py  test_named_ranges.py  test_properties.py  test_sheet_builder_branches.py  test_sheet_builder_grouping.py  test_spec.py  test_spec_loader.py  test_style.py  test_time_engine.py  test_validator.py  test_validator_extended.py
(+10 files in other folders)
